Fix automation API bounding boxes on high-dpi devices

This regressed in r460412 (https://codereview.chromium.org/2762373002)
when we switched from taking the frame-relative coordinates of each web
object and adding a frame offset, to always just walking up the whole
accessibility tree to find the global bounds of an object.

The reason that failed is because the coordinates we get from the web
have the scale factor applied, but coordinates we get from the desktop
do not. So we need to "unapply" the device scale factor just once,
at the point we walk from the web tree to the desktop tree.

This regressed once before last year. This time I figured out a way to add
a regression test for it.

BUG=726081

Review-Url: https://codereview.chromium.org/2911553002
Cr-Commit-Position: refs/heads/master@{#474967}

Former-commit-id: cb19f7f0877982a0d5c326198eb3a67f366d4114